--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -1,12 +1,12 @@
 <!-- Top Bar -->
-<section id="top-bar" class="p-3">
+<!-- <section id="top-bar" class="p-3">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <i class="fas fa-phone"></i> (617)-555-5555
+        <i class="fas fa-phone"></i> 07411225879
       </div>
       <div class="col-md-4">
-        <i class="fas fa-envelope-open"></i> contact@btrealestate.co
+        <i class="fas fa-envelope-open"></i> contact@primrose.co.uk
       </div>
       <div class="col-md-4">
         <div class="social text-right">
@@ -29,4 +29,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
