--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,17 +1,7 @@
-{% extends 'base.html' %}
-{% load humanize %}
-{% block content %}
+{% extends 'base.html' %} {% load humanize %} {% block content %}
 
 <section id="showcase-inner" class="py-5 text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <h1 class="display-4">{{listing.title}}</h1>
-        <p class="lead">
-          <i class="fas fa-map-marker"></i> {{listing.city}},{{listing.state}},{{listing.zipcode}}</p>
-      </div>
-    </div>
-  </div>
+
 </section>
 
 <!-- Breadcrumb -->
@@ -30,11 +20,20 @@
     </nav>
   </div>
 </section>
+<br>
+<!-- Description -->
+<div class="container">
+  <div class=" font-weight-bold text-justify col-md-12">
+    2WO+1NE=TWO is a clothing brand based in Greece, founded by Stella Panagopoulou and Valisia Gotsi. <br><br>The design project is based on Nomadism. Each collection is inspired by a different city across the globe, drawing elements from its art scene,
+    architecture, cinema, music, and people. The crystallization of the notions, essences and shapes of each given place are worked into the garments themselves. The brand strives for a perpetual battle with conservatism and conventionality, envisaging
+    clothes not as strictly functional everyday items but as multidimensional structures, maintaining at the same time fashion's allure and scrutinizing urge.
+  </div>
+</div>
 
 <!-- Listing -->
 <section id="listing" class="py-4">
   <div class="container">
-    <a href="{% url 'listings' %}" class="btn btn-light mb-4">Back To Listings</a>
+    <!-- <a href="{% url 'listings' %}" class="btn btn-light mb-4">Back To Listings</a> -->
     <div class="row">
       <div class="col-md-9">
         <!-- Home Main Image -->
@@ -61,63 +60,21 @@
               <img src="{{ listing.photo_4.url }}" alt="" class="img-fluid">
             </a>
           </div>
+          <div class="col-md-2">
+            <a href="{{ listing.photo_5.url }}" data-lightbox="home-images">
+              <img src="{{ listing.photo_5.url }}" alt="" class="img-fluid">
+            </a>
+          </div><div class="col-md-2">
+            <a href="{{ listing.photo_6.url }}" data-lightbox="home-images">
+              <img src="{{ listing.photo_6.url }}" alt="" class="img-fluid">
+            </a>
+          </div>
 
         </div>
         <!-- Fields -->
         <div class="row mb-5 fields">
           <div class="col-md-6">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-money-bill-alt"></i> Asking Price:
-                <span class="float-right">$490,000</span>
-              </li>
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-bed"></i> Bedrooms:
-                <span class="float-right">3</span>
-              </li>
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-bath"></i> Bathrooms:
-                <span class="float-right">2</span>
-              </li>
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-car"></i> Garage:
-                <span class="float-right">2
-                </span>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-th-large"></i> Square Feet:
-                <span class="float-right">3200</span>
-              </li>
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-square"></i> Lot Size:
-                <span class="float-right">2.5 Acres
-                </span>
-              </li>
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-calendar"></i> Listing Date:
-                <span class="float-right">8/30/2018</span>
-              </li>
-              <li class="list-group-item text-secondary">
-                <i class="fas fa-bed"></i> Realtor:
-                <span class="float-right">Kyle Brown
-                </span>
-              </li>
 
-
-            </ul>
-          </div>
-        </div>
-
-        <!-- Description -->
-        <div class="row mb-5">
-          <div class="col-md-12">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia recusandae esse reiciendis officia omnis non rerum dicta
-            cupiditate nostrum molestias deserunt aut minus inventore animi atque, consequuntur ad fugit. Possimus culpa
-            blanditiis repellendus ipsa similique ullam, natus error dolor harum.
           </div>
         </div>
       </div>
@@ -125,11 +82,11 @@
         <div class="card mb-3">
           <img class="card-img-top" src="{{listing.realtor.photo.url}}" alt="Seller of the month">
           <div class="card-body">
-            <h5 class="card-title">Property Realtor</h5>
+            <h5 class="card-title">Designer</h5>
             <h6 class="text-secondary">{{ listing.realtor}}</h6>
           </div>
         </div>
-        <button class="btn-primary btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">Make An Inquiry</button>
+        <button class="btn-primary btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">Make your booking</button>
       </div>
     </div>
   </div>
@@ -140,29 +97,55 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="inquiryModalLabel">Make An Inquiry</h5>
+        <h5 class="modal-title" id="inquiryModalLabel">Make your booking</h5>
         <button type="button" class="close" data-dismiss="modal">
           <span>&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <form action="{% url 'contact' %}" method="POST">
+          {% csrf_token %} {% if user.is_authenticated %}
+          <input type="hidden" name="user_id" value="{{ user.id }}"> {% else %}
+          <input type="hidden" name="user_id" value="0"> {% endif %}
+          <input type="hidden" name="realtor_email" value="{{ listing.realtor.email }}">
+          <input type="hidden" name="listing_id" value="{{ listing.id }}">
           <div class="form-group">
             <label for="property_name" class="col-form-label">Property:</label>
-            <input type="text" name="listing" class="form-control" value="45 Drivewood Cirlce" disabled>
+            <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
           </div>
           <div class="form-group">
             <label for="name" class="col-form-label">Name:</label>
-            <input type="text" name="name" class="form-control" required>
+            <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name }} {{ user.last_name }}" {% endif %} required>
           </div>
           <div class="form-group">
             <label for="email" class="col-form-label">Email:</label>
-            <input type="email" name="email" class="form-control" required>
+            <input type="email" name="email" class="form-control" {% if user.is_authenticated %} value="{{ user.email }}" {% endif %} required>
           </div>
           <div class="form-group">
             <label for="phone" class="col-form-label">Phone:</label>
             <input type="text" name="phone" class="form-control">
           </div>
+
+
+          <!-- <div class="form-group">
+            <label for="creative_type" class="col-form-label">Creative Type</label>
+            <select name='creative_type' class="form-control">
+              <option>Stylist</option>
+              <option>Designer</option>
+              <option>NA</option>
+            </select>
+          </div> -->
+
+          <div class="form-group">
+            <label for="start_date" class="col-form-label">Start Date:</label>
+            <input type='date' name='start_date' class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="end_date" class="col-form-label">End Date:</label>
+            <input type='date' name='end_date' class="form-control">
+          </div>
+
           <div class="form-group">
             <label for="message" class="col-form-label">Message:</label>
             <textarea name="message" class="form-control"></textarea>
@@ -174,6 +157,5 @@
     </div>
   </div>
 </div>
-
 
 {% endblock %}
