--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,74 +1,84 @@
 {% extends 'base.html' %}
+
 {% load humanize %}
+
+{% block title %} | Browse Designer Collections {% endblock %}
+
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <h1 class="display-4">Browse Our Properties</h1>
-        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h1 class="display-4">Browse Our Designer Collections</h1>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Breadcrumb -->
-<section id="bc" class="mt-3">
-  <div class="container">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href={% url 'index' %}>
-            <i class="fas fa-home"></i> Home</a>
-        </li>
-        <li class="breadcrumb-item active"> Browse Listings</li>
-      </ol>
-    </nav>
-  </div>
-</section>
+  <!-- Breadcrumb -->
+  <!-- <section id="bc" class="mt-3">
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="{% url 'index' %}">
+              <i class="fas fa-home"></i> Home</a>
+          </li>
+          <li class="breadcrumb-item active"> Designer Collections</li>
+        </ol>
+      </nav>
+    </div>
+  </section> -->
+  <br>
+  <div class="container text-center">
+    <div class="search">
+              <form action="{% url 'search' %}">
+                <!-- Form Row 1 -->
+                <div class="form-row">
+                  <div class="col-md-4 mb-3">
+                    <label class="sr-only">Keywords</label>
+                    <input type="text" name="keywords" class="form-control" placeholder="Category">
+                  </div>
 
-<!-- Listings -->
-<section id="listings" class="py-4">
-  <div class="container">
-    <div class="row">
-      {% if listings %}
-        {% for listing in listings %}
+                  <div class="col-md-4 mb-3">
+                    <label class="sr-only">City</label>
+                    <input type="text" name="city" class="form-control" placeholder="Location">
+                  </div>
+
+                  <div class="col-md-4 mb-3">
+                    <label class="sr-only">State</label>
+                    <select name="state" class="form-control">
+                      <option selected="true" disabled="disabled">Ranking</option>
+                      {% for key,value in state_choices.items %}
+                        <option value="{{ key }}">{{ value }}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                </div>
+                <button class="btn btn-secondary btn-block mt-4" type="submit">Submit</button>
+              </form>
+            </div>
+        </div>
+  <!-- Listings -->
+  <section id="listings" class="py-4">
+    <div class="container">
+      <div class="row">
+        {% if listings %}
+          {% for listing in listings %}
           <!-- Listing 1 -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card listing-preview">
               <img class="card-img-top" src="{{ listing.photo_main.url }}" alt="">
               <div class="card-img-overlay">
                 <h2>
-            <span class="badge badge-secondary text-white">{{listing.price | intcomma}}  </span>
-          </h2>
+                  <span class="badge badge-secondary text-white">{{ listing.title }}</span>
+                </h2>
               </div>
               <div class="card-body">
-                <div class="listing-heading text-center">
-                  <h4 class="text-primary">{{listing.title}}</h4>
-                  <p>
-                    <i class="fas fa-map-marker text-secondary"></i> {{listing.city}} {{ listing.zip}} {{listing.state}}</p>
-                </div>
-                <hr>
+
                 <div class="row py-2 text-secondary">
                   <div class="col-6">
-                    <i class="fas fa-th-large"></i>{{listing.lot}}</div>
-                  <div class="col-6">
-                    <i class="fas fa-car"></i> {{listing.garage}}</div>
-                </div>
-                <div class="row py-2 text-secondary">
-                  <div class="col-6">
-                    <i class="fas fa-bed"></i> {{listing.bedrooms}}</div>
-                  <div class="col-6">
-                    <i class="fas fa-bath"></i> {{listings.bathrooms}}</div>
-                </div>
-                <hr>
-                <div class="row py-2 text-secondary">
-                  <div class="col-12">
-                    <i class="fas fa-user"></i> {{listing.realtor}}</div>
-                </div>
-                <div class="row text-secondary pb-2">
-                  <div class="col-6">
-                    <i class="fas fa-clock"></i> {{listing.list_date | timesince}}</div>
+                    <i class="fas fa-user"></i> {{ listing.realtor }}</div>
                 </div>
                 <hr>
                 <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">More Info</a>
@@ -76,35 +86,50 @@
             </div>
           </div>
           {% endfor %}
-            {% else %}
-              <div class="col-md-12">
-                <p> No Listings Available</p>
-              </div>
-              {% endif %}
-    </div>
+        {% else %}
+          <div class="col-md-12">
+            <p>No Listings Available</p>
+          </div>
+        {% endif %}
+      </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <ul class="pagination">
-          <li class="page-item disabled">
-            <a class="page-link" href="#">&laquo;</a>
-          </li>
-          <li class="page-item active">
-            <a class="page-link" href="#">1</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">&raquo;</a>
-          </li>
-        </ul>
+      <div class="row">
+        <div class="col-md-12">
+          {% if listings.has_other_pages %}
+            <ul class="pagination">
+              {% if listings.has_previous %}
+                <li class="page-item">
+                  <a href="?page={{listings.previous_page_number}}" class="page-link">&laquo;</a>
+                </li>
+              {% else %}
+                <li class="page-item disabled">
+                  <a class="page-link">&laquo;</a>
+                </li>
+              {% endif %}
+              {% for i in listings.paginator.page_range %}
+                {% if listings.number == i %}
+                  <li class="page-item active">
+                    <a class="page-link">{{i}}</a>
+                  </li>
+                {% else %}
+                  <li class="page-item">
+                    <a href="?page={{i}}" class="page-link">{{i}}</a>
+                  </li>
+                {% endif %}
+              {% endfor %}
+              {% if listings.has_next %}
+                <li class="page-item">
+                  <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;</a>
+                </li>
+              {% else %}
+                <li class="page-item disabled">
+                  <a class="page-link">&raquo;</a>
+                </li>
+              {% endif %}
+            </ul>
+          {% endif %}
+        </div>
       </div>
     </div>
-  </div>
-</section>
-
+  </section>
 {% endblock %}
