--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %} | User Dashboard {% endblock %}
+{% block title %} | Stylist Dashboard {% endblock %}
 
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <h1 class="display-4">User Dashboard</h1>
+          <h1 class="display-4">Stylist Dashboard</h1>
           <p class="lead">Manage your account</p>
         </div>
       </div>
@@ -36,6 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
+
           <h2>Welcome {{ user.first_name }}</h2>
           {% if contacts %}
             <p>Here are the designer collections that you have inquired about</p>
