--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -123,7 +123,7 @@
           </div>
           <div class="form-group">
             <label for="phone" class="col-form-label">Phone:</label>
-            <input type="text" name="phone" class="form-control">
+            <input type="text" name="phone" class="form-control" required>
           </div>
 
 
