--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -51,8 +51,8 @@
               class="nav-item mr-3"
             {% endif %}
             >
-              <a class="nav-link" href="{% url 'dashboard' %}">
-               Welcome {{ user.username }} (Dashboard)</a>
+            <a class="nav-link" href="{% url 'dashboard' %}">
+               Dashboard</a>
             </li>
             <li class="nav-item mr-3">
               <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
